@@ -13,6 +13,8 @@ Features:
 - Inspection: Warn user if rule from 'rulesorder' isn't available in current or included files (see #254)
 - Inspection: Warn about string arguments split on several lines (see #259)
 
+Fixed:
+- Completion does not suggest top-level keywords in comments (see #178)
 
 Version 0.8.0 build #0.8.0.214
 -------------
